# TorchCS-Bedrock

./: CMakeLists.txt  README.md
bedrock/: log_settings_updater.hpp  macros.hpp  scope_exit.hpp
bedrock/bedrock_log/: bedrock_log.hpp  category_log_file.hpp  log_area_filter.hpp  log_category.hpp  log_channel.hpp  log_details.hpp  log_level.hpp  log_rule.hpp
bedrock/core/: path.hpp
bedrock/diagnostics/: diagnostics.hpp  log_area.hpp  log_level.hpp
bedrock/math/: vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp
bedrock/network/: connection_definition.hpp
bedrock/scripting/: plugin_execution_group.hpp
bedrock/server/commands/: command_block_mode.hpp  command_origin_type.hpp  command_output_type.hpp  command_parameter_option.hpp  command_permission_level.hpp  command_registry_hard_non_terminal.hpp
bedrock/world/actor/: actor_block_sync_message_message_id.hpp  actor_category.hpp  actor_damage_cause.hpp  actor_data_bounding_box_component_type.hpp  actor_data_ids.hpp  actor_event.hpp  actor_flags.hpp  actor_link_type.hpp  actor_type.hpp
sample/: CMakeLists.txt
sample/src/: main.cpp
